# simple-ai-worker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README_DOCKERHUB.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  pytest.ini  sonar-project.properties
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yaml  docker-ci.yml  docs-build-check.yaml  documentation.yaml  rw_build_and_test.yaml  rw_run_all_test_and_record.yaml
config/: agents.example.yaml  agents.yaml
docs/: docusaurus.config.ts  package.json  pnpm-lock.yaml
docs/contents/document/: sidebars.ts
examples/type_checking/: README.md  type_checking_example.py
scripts/docker/: run-server.sh
src/: main.py  slack_main.py  type_definitions.py  types.py
src/agents/: __init__.py  factory.py  llm_factory.py  registry.py
src/config/: __init__.py  agent_config.py  loader.py  settings.py
src/crew/: __init__.py  builder.py
src/scheduler/: __init__.py  runner.py
src/scheduler/jobs/: __init__.py  dev_lead_listener.py  hello_world.py  plan_and_notify.py  planner_listener.py  pr_merge_watcher.py  pr_review_comment_handler.py  scan_tickets.py
src/slack_app/: __init__.py  app.py  router.py
src/slack_app/handlers/: __init__.py  dev.py  dev_lead.py  planner.py
src/ticket/: __init__.py  clickup_tracker.py  jira_tracker.py  models.py  registry.py  rest_client.py  tracker.py  workflow.py
test/: conftest.py
test/e2e_test/: .env.e2e.example  README.md  conftest.py  docker-compose.e2e.yml  test_live_mcp_smoke.py
test/e2e_test/common/: assertions.py  e2e_settings.py  fake_llm.py  hybrid_mode.py  mcp_stub.py  pr_state_management.py  state_management.py  test_data.py  test_infrastructure.py  tool_handlers.py
test/e2e_test/dev/: conftest.py  test_dev_agent_workflow_clickup_e2e.py  test_dev_agent_workflow_jira_e2e.py  test_dev_plan_and_notify_clickup_e2e.py  test_dev_plan_and_notify_jira_e2e.py  test_dev_slack_thread_summary_clickup_e2e.py  test_dev_slack_thread_summary_jira_e2e.py  test_full_dev_lifecycle_clickup_e2e.py  test_full_dev_lifecycle_jira_e2e.py  test_pr_auto_merge_e2e.py  test_pr_review_comment_e2e.py
test/e2e_test/dev_lead/: conftest.py  test_dev_lead_planning_lifecycle_clickup_e2e.py  test_dev_lead_planning_lifecycle_jira_e2e.py
test/e2e_test/planner/: conftest.py  test_planner_idea_discussion_clickup_e2e.py  test_planner_idea_discussion_jira_e2e.py
test/integration_test/: conftest.py  test_dev_lead_feasibility_handler.py  test_dev_thread_summary_handler.py  test_plan_and_notify.py  test_planner_idea_discussion_handler.py  test_pr_merge_watcher.py  test_pr_review_comment_handler.py  test_scan_and_dispatch_lifecycle.py  test_scheduler_job_registration.py  test_workflow_config.py
test/unit_test/: test_main.py  test_slack_main.py
test/unit_test/agents/: __init__.py  test_factory.py  test_llm_factory.py  test_registry.py
test/unit_test/config/: __init__.py  test_agent_config.py  test_loader.py  test_settings.py
test/unit_test/crew/: __init__.py  test_builder.py
test/unit_test/scheduler/: test_scheduler_runner.py
test/unit_test/scheduler/jobs/: test_hello_world_job.py  test_listener_jobs.py  test_pr_merge_watcher_job.py  test_pr_review_comment_handler_job.py  test_scan_tickets_job.py
test/unit_test/slack_app/: test_app.py  test_router.py
test/unit_test/slack_app/handlers/: test_handlers.py
test/unit_test/ticket/: test_clickup_tracker.py  test_jira_tracker.py  test_models.py  test_registry.py  test_ticket_comment.py  test_tracker.py  test_workflow.py
