[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-ai-worker"
version = "0.0.0"
description = "🧑‍💻 Just a POC production"
authors = [{ name = "Chisanan232", email = "chi10211201@cycu.org.tw" }]
requires-python = ">=3.12,<4.0"
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    # For AI agent could schedule tasks as positively active
    "apscheduler>=3.11.2",
    # AI agent framework
    "crewai>=1.10.1",
    # Data validation for data models
    "pydantic>=2.11.10",
    "pydantic-settings>=2.10.1",
    # YAML parsing for agent config files
    "pyyaml>=6.0.2",
    # Web framework for API (Slack events APIs) as a AI chat application
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
]

[project.scripts]
simple-ai-worker = "src.main:main"

[project.urls]
Homepage = "https://github.com/Chisanan232/simple-ai-worker"
Repository = "https://github.com/Chisanan232/simple-ai-worker"

[dependency-groups]
dev = [
    "pytest>=8.1.1,<10",
    "pytest-cov>=5.0.0,<8",
    "coverage~=7.10",
    "pytest-rerunfailures>=14.0,<17",
    "aiohttp>=3.12.13",
    "pytest-asyncio>=0.23.0,<2",
]
pre-commit-ci = [
    "pre-commit>=3.5.0,<5",
    "pylint>=3.1.0,<5",
    "mypy>=1.2.0,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "pre-commit-ci",
]

[tool.hatch.build.targets.sdist]
include = ["src/"]
packages = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src/"]
packages = ["src"]
