[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-ai-worker"
version = "0.0.0"
description = "🧑‍💻 Just a POC production"
authors = [{ name = "Chisanan232", email = "chi10211201@cycu.org.tw" }]
requires-python = ">=3.12,<4.0"
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    # For AI agent could schedule tasks as positively active
    "apscheduler>=3.11.2",
    # AI agent framework
    "crewai>=1.10.1",
    # CrewAI Enterprise native tool resolution (Agent(apps=[...]))
    "crewai-tools>=1.10.1",
    # Slack Bolt framework — Socket Mode event handler for real-time Planner / Dev Lead chat
    "slack-bolt>=1.27.0",
    # Data validation for data models
    "pydantic>=2.11.10",
    "pydantic-settings>=2.10.1",
    # YAML parsing for agent config files
    "pyyaml>=6.0.2",
    # Synchronous HTTP client for ClickUp / JIRA direct REST API calls
    # (fetch_tickets_for_operation bypasses the LLM crew entirely)
    "httpx>=0.28.1",
]

[project.scripts]
simple-ai-worker = "src.main:main"
simple-ai-slack  = "src.slack_main:main"

[project.urls]
Homepage = "https://github.com/Chisanan232/simple-ai-worker"
Repository = "https://github.com/Chisanan232/simple-ai-worker"

[dependency-groups]
dev = [
    "pytest>=8.1.1,<10",
    "pytest-cov>=5.0.0,<8",
    "coverage~=7.10",
    "pytest-rerunfailures>=14.0,<17",
    "aiohttp>=3.12.13",
    "pytest-asyncio>=0.23.0,<2",
    "freezegun>=1.5.5",
    "pytest-httpserver>=1.0.0",
]
pre-commit-ci = [
    "pre-commit>=3.5.0,<5",
    "pylint>=3.1.0,<5",
    "mypy>=1.2.0,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "pre-commit-ci",
]

[tool.hatch.build.targets.sdist]
include = ["src/"]
packages = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src/"]
packages = ["src"]
